[package]
name = "rust_tuts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.5.4"
colored = "*"
parking_lot = "0.12.0"

[lib]
name = "local_crates"
path = "src/local_crates.rs"